<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/filter_bottom_sheet_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statuses_input_label" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/statuses_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_bottom_sheet_input_height"
            android:layout_marginTop="@dimen/filter_bottom_sheet_input_marginTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species_input_label" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/species_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_bottom_sheet_input_height"
            android:layout_marginTop="@dimen/filter_bottom_sheet_input_marginTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_input_label" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/genders_selector"
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_bottom_sheet_input_height"
            android:layout_marginTop="@dimen/filter_bottom_sheet_input_marginTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_input_label" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_bottom_sheet_input_marginTop"
            android:hint="@string/type_input_hint"
            android:textSize="@dimen/small_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bottom_sheet_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/filter_bottom_sheet_button_marginTop"
            android:text="@string/filter_button_string" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>